Поправил фоновое изображение в блоках: header, testimonials

--- a/scss/blocks/_testimonials.scss
+++ b/scss/blocks/_testimonials.scss
@@ -1,5 +1,5 @@
 .testimonials {
-    background: url('../../img/testimonials_bg.png') no-repeat;
+    background: url('../img/testimonials_bg.png') no-repeat;
     height: 608px;
     background-size: 100%;
     overflow: hidden;
