--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -2,7 +2,7 @@
     position: relative;
     z-index: 1;
     height: 1040px;
-    background: url('../../img/header_bg.png') no-repeat;
+    background: url('../img/header_bg.png') no-repeat;
     background-size: 100%;
     padding: 0 140px;
     &__menu {
