--- a/scss/blocks/_buttons.scss
+++ b/scss/blocks/_buttons.scss
@@ -16,7 +16,7 @@
         border: 2px solid #0f7bff;
     }
     &_nav {
-        margin-top: 25px;
+        margin-left: 40px;
     }
     &_pricing {
         display: block;
