--- a/scss/blocks/_testimonials.scss
+++ b/scss/blocks/_testimonials.scss
@@ -3,6 +3,7 @@
     height: 608px;
     background-size: 100%;
     overflow: hidden;
+    background-color: #f5fcfd;
     &__content {
         padding: 130px 0;
     }
