--- a/scss/blocks/_news.scss
+++ b/scss/blocks/_news.scss
@@ -2,7 +2,7 @@
 	position: relative;
     padding: 152px 0 127px 0;
     height: 960px;
-    background: #f5fcfd;;
+	background: #f5fcfd;
     &__subheader {
         color: #929292;
         font-size: 16px;
@@ -24,6 +24,9 @@
         left: 310px;
         bottom: -50px;
         margin-left: -15px;
+	}
+	.row {
+		margin-top: 40px;
 	}
 }
 .news-blog-right {
