--- a/scss/libs/_font.scss
+++ b/scss/libs/_font.scss
@@ -2,8 +2,8 @@
     font-family: 'Quicksand';
     font-display: swap;
     src: local('Quicksand-Medium'),
-        url('../../fonts/Quicksand-Medium.woff') format('woff'),
-        url('../../fonts/Quicksand-Medium.woff2') format('woff2');
+        url('../fonts/Quicksand-Medium.woff') format('woff'),
+        url('../fonts/Quicksand-Medium.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
@@ -12,8 +12,8 @@
     font-family: 'Quicksand';
     font-display: swap;
     src: local('Quicksand-Regular'),
-    url('../../fonts/Quicksand-Regular.woff') format('woff'),
-    url('../../fonts/Quicksand-Regular.woff2') format('woff2');
+    url('../fonts/Quicksand-Regular.woff') format('woff'),
+    url('../fonts/Quicksand-Regular.woff2') format('woff2');
     font-weight: 300;
     font-style: normal;
 }
@@ -22,8 +22,8 @@
     font-family: 'Quicksand';
     font-display: swap;
     src: local('Quicksand-Bold'),
-    url('../../fonts/Quicksand-Bold.woff') format('woff'),
-    url('../../fonts/Quicksand-Bold.woff2') format('woff2');
+    url('../fonts/Quicksand-Bold.woff') format('woff'),
+    url('../fonts/Quicksand-Bold.woff2') format('woff2');
     font-weight: 700;
     font-style: normal;
 }
